<resources>
    <string name="app_name">Vynils</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_albums">Albums</string>
    <string name="title_album">Detail album</string>
    <string name="cover">Cover album</string>
    <string name="home_artist">Find your favorite artists</string>
    <string name="home_albums">Go to Albums</string>
    <string name="home_collectors">Find Collectors</string>
    <string name="title_artist">Detail Artist</string>
    <string name="title_artists">Artists</string>
    <string name="title_collectors">Collector</string>
    <string name="create_album_name_error">Name must not be empty</string>
    <string name="create_album_cover_error">Cover must not be empty</string>
    <string name="create_album_date_error">Select a realease date</string>
    <string name="create_album_description_error">Description must not be empty</string>
    <string name="create_album_genre_error">Select a genre</string>
    <string name="create_album_record_error">Select a record label</string>
    <string name="artist_name">Name</string>
    <string name="artist_description">Description</string>
    <string name="artist_image">Image</string>
    <string name="error_add_artist">An error occurred while trying to create a band </string>
    <string name="success_add_artist">Success</string>
    <string name="add_artist">New Artist</string>
    <string name="add_artist_button_description">Se muestra un boton para agregar nuevos artistas</string>
    <string name="cancel_artist_button_description">Se muestra un boton para borrar el formulario</string>

</resources>